fixed logo spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ nav .logo a,img{
     letter-spacing: 1.5px;
     cursor:pointer;
     text-decoration: none;
+    margin-right: 2%;
 }
 
 
